--- a/README.Rmd
+++ b/README.Rmd
@@ -37,6 +37,10 @@ gen_desc |> knitr::kable()
 
 *Monthly Postcensal Resident Population*, 7/1/2024 to 12/1/2024.  Made available by the US Census as CSV file [here](https://www2.census.gov/programs-surveys/popest/datasets/2020-2023/national/asrh/nc-est2023-alldata-p-file10.csv).  
 
+
+> **U.S. Census Bureau.** (2023). *Monthly Population Estimates by Age, Sex, Race, and Hispanic Origin for the United States: April 1, 2020, to July 1, 2023 (with short-term projections to December 2024).* National population estimates. U.S. Department of Commerce. Retrieved from https://www.census.gov
+
+
 ```{r message=FALSE, warning=FALSE}
 dlink <- 'https://www2.census.gov/programs-surveys/popest/datasets/2020-2023/national/asrh/nc-est2023-alldata-p-file10.csv'
 
